--- a/source/step_2.org
+++ b/source/step_2.org
@@ -101,43 +101,6 @@ file:img/faults.jpg]]
 - When you're finished, your board should look something like the image above. 
 - You can now see your teacher for a Genie C08 chip, which you can insert into the chip holder. 
 - NOTE: Make sure the right way up, by ensuring that the notch in the Genie chip lines up with the notch on the chip carrier.
-* Download socket
-:PROPERTIES:
-:HTML_CONTAINER_CLASS: activity
-:END:
-** Build It
-SCHEDULED: <2014-07-11 Fri>
-:PROPERTIES:
-:HTML_CONTAINER_CLASS: build
-:END:
-- To program the PIC chip with your flowchart, we need to make up a connector to allow us to plug it into a PCB.
-- To do this, we'll need... 
-[[file:img/dl_parts.jpg]]
-  + 1x 3.5mm stereo jack (as seen in mp3 player and 'phone headphone sockets),
-  + 1x 22k resistor, and
-  + 3x female header plugs (any colours, but ideally all different).
-- Using the image below, identify the 0V and Status output pins on the bottom of the socket, and solder one of your female header plugs to each one.
-- Next, solder one end of a 22k resistor to the remaining socket (Programming Input), and solder a header plug to the other end. 
-- Optionally, push the three header pins onto the PCB in the correct order (shown in the picture), and use a small strip of selotape to bond them together for more convenience later on. 
-[[file:img/dl_cable.jpg]]
-* Power cable
-:PROPERTIES:
-:HTML_CONTAINER_CLASS: activity
-:END:
-** Build It
-:PROPERTIES:
-:HTML_CONTAINER_CLASS: build
-:END:
-- We'll need a way to power this circuit. It only needs 3V to operate, which we can take from either 2x AA (or AAA) batteries, or from a desktop DC power supply. We'll need to make sure we can make a clean connection without ny risk of electrical shorting, so we'll use a couple more female headers.
-- To make a battery pack connector, you'll need... 
-[[file:img/pwr_part.jpg]]
-  + 2 female header plugs, with one end stripped,
-  + 1x twin AA or AAA battery holder,
-  + 1x 1" piece of heat-shrink tubing (cut it in half to give two smaller pieces).
-- Shorten the wire ends of both the headers and the battery box, and strip all the wire ends.
-- then place a piece of heatshrink
-[[file:img/pwr_done.jpg]]
-
 * Assessment Point
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: activity
@@ -146,6 +109,6 @@ SCHEDULED: <2014-07-11 Fri>
 :PROPERTIES:
 :HTML_CONTAINER_CLASS: badge
 :END:
-- Take pictures of the following, for inclusion in your portfolio: PCB (front), PCB (back), Download cable and power cable.
+- Take pictures of the following, for inclusion in your portfolio: PCB (front), PCB (back).
 - Upload your photos and then create a text document describing your soldering technique, briefly stating what you feel is good about your work, and identifying something you'd like to improve. Upload the text document.
 [[file:index.html][Return to homepage]]
