--- a/source/step_4.org
+++ b/source/step_4.org
@@ -118,4 +118,6 @@ We've now got a working PCB that we can write software for. In this stage, we'll
 :END:
 - Take screenshots of your working analogue program, and write a few sentences describing how you modified your program, and the steps you took to ensure it worked correctly in a text document. Upload these pictures and the text document.
 - For the platinum task, write the same analogue program in GenieBasic. A video tutorial is available on the open drive on how to do this. Click the link [[\\brgradellnas\open$\Systems%20and%20Control\Year%208\PIC%20Licence][here]] to go to the file with the video. 
+- *Gold Badge* - Progress ladder, Blue - Test programs both in simulations and live, adapting code to compensate for any differences as needed.
+- *Platinum Badge* - Progress ladder, Violet - Use a text-based language to write a short PIC program.
 [[file:index.html][Return to homepage]]
