--- a/source/step_5.org
+++ b/source/step_5.org
@@ -107,5 +107,8 @@ Program your PCB, so that it...
 :END:
 - Take (cropped) screenshots of your individual working programs, and write a few sentences describing how it works in a text document. Upload each picture and text document seperately.
 - On your customised program, explain the scenario briefly, and explain how the code works.
-- You can now put your favourite program on it, and take your PCB home. Well done! 
+- You can now put your favourite program on it, and take your PCB home. Well done!
+- *Silver badge* (First 3 programs)- Progress ladder, Green - With assistance, write programs to handle inputs in a PIC circuit
+- *Gold Badge* (Next 2 programs)- Progress ladder, Blue - Independently write PIC programs which handle both digital and analogue data.
+- *Platinum Badge* (Final 2 programs) - Progress ladder, Violet - Invent and refine appropriate PIC programs independently. 
 [[file:index.html][Return to homepage]]
