--- a/source/step_4.org
+++ b/source/step_4.org
@@ -120,4 +120,7 @@ We've now got a working PCB that we can write software for. In this stage, we'll
 - For the platinum task, write the same analogue program in GenieBasic. A video tutorial is available on the open drive on how to do this. Click the link [[\\brgradellnas\open$\Systems%20and%20Control\Year%208\PIC%20Licence][here]] to go to the file with the video. 
 - *Gold Badge* - Progress ladder, Blue - Test programs both in simulations and live, adapting code to compensate for any differences as needed.
 - *Platinum Badge* - Progress ladder, Violet - Use a text-based language to write a short PIC program.
+#+BEGIN_HTML
+<iframe width="560" height="315" src="https://www.youtube.com/embed/dzous3M1uT4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+#+END_HTML
 [[file:index.html][Return to homepage]]
