--- a/source/step_3.org
+++ b/source/step_3.org
@@ -97,13 +97,10 @@ By this point, you should have a fully soldered together PCB (with a chip), a do
 :HTML_CONTAINER_CLASS: test
 :END:
 - We can now test the remainder of the PCB and your download cable by connecting your board to Circuit Wizard. You'll need a USB Genie Download cable from the teacher to do this.
-- Plug the download cable into the computer BEFORE you load Circuit Wizard, then wait 10s for the computer to connect to it, and load Circuit Wizard.
-- Check that the download cable is recognised by the computer (this is the single most common cause of problems!) by clicking "Project -> Options -> Control", and ensuing that the settings look something like this
-[[file:img/dl_settings.jpg]]
-- If the cable is working correctly, you'll see a little red icon in the drop-down list, with the words "USB to serial port" next to it. The COM number doesn't matter (mine is on COM3, but yours might be COM6, for instance). Whichever port has the icon is the one you need to select. 
-- Connect power to the PCB, then connect your home-made download socket to the three SIL header pins in the top right-hand corner of your board. The order is important...
+- Plug the download cable into the USB port of the computer, a dialogue box will appear stating the cable is connected. Click 'OK'. 
+- Connect power to the PCB, then connect the other side of the download cable (3.2mm stereo jack) into the download socket on the PCB.
 [[file:img/dl_conns.jpg]]
-- You can now plug your Genie cable into the download socket. If you've done everything correctly, the right-hand side of the Circuit Wizard should now show you a "Connected GENIE C08" message, and the bottom-left LED should blink continously as data is exchanged between the PC and your circuit. Congratulations! 
+- If you've done everything correctly, on the top right-hand side of the Circuit Wizard screen should now show you a "Connected GENIE 08" message, and the bottom-left LED should blink continously as data is exchanged between the PC and your circuit. Congratulations! 
 - If it hasn't come up as connected, there are a few reasons this could be:
   + Check with a multimeter that there is 3V across pins 1 and 8.
   + Check that the pins going into the download socket are in the right order. I used black, grey and white in mine, but yours are likely to be different. Is there a 22k resistor on your download socket?
