combined lesson 3 and 4

--- a/source/index.org
+++ b/source/index.org
@@ -31,23 +31,19 @@
 :PROPERTIES:
 	:HTML_CONTAINER_CLASS: activity
 	:END:
-* [[file:step_3.html][Lesson 5 - PCB Testing]]
+* [[file:step_3.html][Lesson 5 - PCB Testing and Programming]]
 :PROPERTIES:
 	:HTML_CONTAINER_CLASS: activity
 	:END:
-* [[file:step_4.html][Lesson 6 - PC Connection and Testing]]
-:PROPERTIES:
-	:HTML_CONTAINER_CLASS: activity
-	:END:
-* [[file:step_5.html][Lesson 7 - PIC Coding Challenges]]
+* [[file:step_5.html][Lesson 6 - PIC Coding Challenges]]
 :PROPERTIES:
 	:HTML_CONTAINER_CLASS: activity
         :END:      
-* [[file:step_6.html][Lesson 8 - Housing]]
+* [[file:step_6.html][Lesson 7 - Housing]]
 :PROPERTIES:
 	:HTML_CONTAINER_CLASS: activity
         :END:      
-* [[file:evaluation.html][Lesson 9 - Evaluation]]
+* [[file:evaluation.html][Lesson 8 - Evaluation]]
 :PROPERTIES:
 	:HTML_CONTAINER_CLASS: activity
         :END:      
